--- a/Context-Tree Weighting.ipynb
+++ b/Context-Tree Weighting.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,21 +27,21 @@
     "        for i in range(len(s)-d):\n",
     "            for j in range(0,d+1):\n",
     "                if j==0: context='root' # root is the empty context\n",
-    "                else: context=s[i:i+j]\n",
+    "                else: context=s[i+1:i+j+1]\n",
     "                \n",
     "                if context not in self.tree: \n",
     "                    self.tree[context]=[0,0]\n",
-    "                if s[i+j:i+j+1]=='1': \n",
+    "                if s[i:i+1]=='1': \n",
     "                    self.tree[context][1]+=int(1)\n",
     "                else: \n",
     "                    self.tree[context][0]+=int(1)\n",
     "                \n",
-    "                #print('\\tcontext: '+context+\"  \"+str(self.tree[context]))\n",
+    "                print('\\tcontext: '+context+\"  \"+str(self.tree[context]))\n",
     "    \n",
     "    # update context path\n",
     "    def addBit(self,b):\n",
-    "        self.seq+=b\n",
-    "        self.n+=1\n",
+    "        #self.seq+=b\n",
+    "        #self.n+=1\n",
     "        if b: self.tree['root'][1]+=int(1)\n",
     "        else: self.tree['root'][0]+=int(1)\n",
     "        for i in range(1,self.depth+1):\n",
@@ -54,6 +54,9 @@
     "                self.tree[context][1]+=int(1)\n",
     "            else:\n",
     "                self.tree[context][0]+=int(1)\n",
+    "                \n",
+    "        self.seq+=b\n",
+    "        self.n+=1\n",
     "            \n",
     "    def showTree(self):\n",
     "        for i in self.tree:\n",
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -94,64 +97,63 @@
      "output_type": "stream",
      "text": [
       "\tcontext: root  [1, 0]\n",
-      "\tcontext: 0  [0, 1]\n",
-      "\tcontext: 01  [0, 1]\n",
-      "\tcontext: 011  [1, 0]\n",
-      "\tcontext: root  [1, 1]\n",
-      "\tcontext: 1  [0, 1]\n",
+      "\tcontext: 1  [1, 0]\n",
       "\tcontext: 11  [1, 0]\n",
       "\tcontext: 110  [1, 0]\n",
-      "\tcontext: root  [1, 2]\n",
+      "\tcontext: root  [1, 1]\n",
       "\tcontext: 1  [1, 1]\n",
-      "\tcontext: 10  [1, 0]\n",
+      "\tcontext: 10  [0, 1]\n",
       "\tcontext: 100  [0, 1]\n",
+      "\tcontext: root  [1, 2]\n",
+      "\tcontext: 0  [0, 1]\n",
+      "\tcontext: 00  [0, 1]\n",
+      "\tcontext: 001  [0, 1]\n",
       "\tcontext: root  [2, 2]\n",
       "\tcontext: 0  [1, 1]\n",
-      "\tcontext: 00  [0, 1]\n",
-      "\tcontext: 001  [1, 0]\n",
-      "\tcontext: root  [3, 2]\n",
-      "\tcontext: 0  [1, 2]\n",
-      "\tcontext: 01  [1, 1]\n",
+      "\tcontext: 01  [1, 0]\n",
       "\tcontext: 010  [1, 0]\n",
-      "\tcontext: root  [3, 3]\n",
+      "\tcontext: root  [3, 2]\n",
       "\tcontext: 1  [2, 1]\n",
-      "\tcontext: 10  [2, 0]\n",
-      "\tcontext: 100  [0, 2]\n",
+      "\tcontext: 10  [1, 1]\n",
+      "\tcontext: 100  [1, 1]\n",
+      "\tcontext: root  [3, 3]\n",
+      "\tcontext: 0  [1, 2]\n",
+      "\tcontext: 00  [0, 2]\n",
+      "\tcontext: 001  [0, 2]\n",
       "\tcontext: root  [4, 3]\n",
       "\tcontext: 0  [2, 2]\n",
-      "\tcontext: 00  [0, 2]\n",
-      "\tcontext: 001  [1, 1]\n",
+      "\tcontext: 01  [2, 0]\n",
+      "\tcontext: 011  [1, 0]\n",
       "1100100110\n",
       "root --> [4, 3]\n",
-      "0 --> [2, 2]\n",
-      "01 --> [1, 1]\n",
-      "011 --> [1, 0]\n",
       "1 --> [2, 1]\n",
       "11 --> [1, 0]\n",
       "110 --> [1, 0]\n",
-      "10 --> [2, 0]\n",
-      "100 --> [0, 2]\n",
+      "10 --> [1, 1]\n",
+      "100 --> [1, 1]\n",
+      "0 --> [2, 2]\n",
       "00 --> [0, 2]\n",
-      "001 --> [1, 1]\n",
+      "001 --> [0, 2]\n",
+      "01 --> [2, 0]\n",
       "010 --> [1, 0]\n",
+      "011 --> [1, 0]\n",
       "\n",
-      "\tcontext: 1\n",
-      "\tcontext: 10\n",
-      "\tcontext: 101\n",
+      "\tcontext: 0\n",
+      "\tcontext: 01\n",
+      "\tcontext: 011\n",
       "11001001101\n",
       "root --> [4, 4]\n",
-      "0 --> [2, 2]\n",
-      "01 --> [1, 1]\n",
-      "011 --> [1, 0]\n",
-      "1 --> [3, 1]\n",
+      "1 --> [2, 1]\n",
       "11 --> [1, 0]\n",
       "110 --> [1, 0]\n",
-      "10 --> [2, 1]\n",
-      "100 --> [0, 2]\n",
+      "10 --> [1, 1]\n",
+      "100 --> [1, 1]\n",
+      "0 --> [2, 3]\n",
       "00 --> [0, 2]\n",
-      "001 --> [1, 1]\n",
+      "001 --> [0, 2]\n",
+      "01 --> [2, 1]\n",
       "010 --> [1, 0]\n",
-      "101 --> [0, 1]\n"
+      "011 --> [2, 0]\n"
      ]
     }
    ],
