--- a/Context-Tree Weighting.ipynb
+++ b/Context-Tree Weighting.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "                self.tree[context][int(s[i:i+1])]+=int(1)\n",
     "    \n",
     "    # get next symbol and update context path\n",
-    "    def addBit(self,b):\n",
+    "    def addSymbol(self,b):\n",
     "        self.tree['root'][int(b)]+=int(1)\n",
     "        for i in range(1,self.depth+1):\n",
     "            context=self.seq[self.n-i:]\n",
@@ -63,7 +63,6 @@
     "            self.probs('0'+s)\n",
     "            self.probs('1'+s)\n",
     "            self.Pw[s] = (self.Pe(a,b) + self.Pw['0'+s] * self.Pw['1'+s])/2\n",
-    "        print(\"s: \"+s+\"  a,b: \"+str(a)+\",\"+str(b)+\"  \"+str(self.Pw[s]))\n",
     "            \n",
     "    # prints all probabilities of nodes in the tree\n",
     "    def showProbs(self):\n",
@@ -74,50 +73,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s: 000  a,b: 0,0  1\n",
-      "s: 100  a,b: 0,2  0.375\n",
-      "s: 00  a,b: 0,2  0.375\n",
-      "s: 010  a,b: 1,0  0.5\n",
-      "s: 110  a,b: 1,0  0.5\n",
-      "s: 10  a,b: 2,0  0.3125\n",
-      "s: 0  a,b: 2,2  0.0703125\n",
-      "s: 001  a,b: 1,1  0.125\n",
-      "s: 101  a,b: 0,0  1\n",
-      "s: 01  a,b: 1,1  0.125\n",
-      "s: 011  a,b: 1,0  0.5\n",
-      "s: 111  a,b: 0,0  1\n",
-      "s: 11  a,b: 1,0  0.5\n",
-      "s: 1  a,b: 2,1  0.0625\n",
-      "s:   a,b: 4,3  0.00341796875\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "source = \"1100100110\"\n",
+    "sequence = \"1100100110\"\n",
     "\n",
-    "t = ctw(source,3)\n",
-    "#print(str(t.kt(2,0)))\n",
-    "#print(str(t.kt(1,1)))\n",
+    "t = ctw(sequence,3)\n",
+    "print('Context-Tree\\n---------------------------')\n",
+    "t.showTree()\n",
+    "print('Probabilities & Weights\\n---------------------------')\n",
     "t.probs('')\n",
-    "#t.showProbs()\n",
+    "t.showProbs()\n",
     "\n",
-    "#t.showSource()\n",
-    "#t.showTree()\n",
-    "#t.probs()\n",
-    "print()\n",
-    "#t.addBit('1')\n",
-    "#t.showSource()\n",
-    "#t.showTree()\n"
+    "#print('Added a symbol\\n---------------------------')\n",
+    "#t.addSymbol('1')\n",
+    "#t.showTree()"
    ]
   },
   {
