--- a/Context-Tree Weighting.ipynb
+++ b/Context-Tree Weighting.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ctw:\n",
     "    # build the tree\n",
     "    def __init__(self,s,d):\n",
-    "        self.seq, self.depth, self.n, self.tree, self.Pw = s, d, len(s), {}, {}\n",
+    "        self.seq, self.depth, self.tree, self.Pw = s, d, {}, {}\n",
     "        self.tree['root']=[0,0] \n",
     "        for i in range(d,len(s)):\n",
     "            for j in range(0,d+1):\n",
@@ -31,12 +31,11 @@
     "    def addSymbol(self,b):\n",
     "        self.tree['root'][int(b)]+=int(1)\n",
     "        for i in range(1,self.depth+1):\n",
-    "            context=self.seq[self.n-i:]\n",
+    "            context=self.seq[len(self.seq)-i:]\n",
     "            if context not in self.tree:\n",
     "                self.tree[context]=[0,0]\n",
     "            self.tree[context][int(b)]+=int(1)\n",
     "        self.seq+=b\n",
-    "        self.n+=1\n",
     "            \n",
     "    # prints the tree and a, b\n",
     "    def showTree(self):\n",
@@ -73,11 +72,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Context-Tree\n",
+      "---------------------------\n",
+      "root --> [4, 3]\n",
+      "0 --> [2, 2]\n",
+      "10 --> [2, 0]\n",
+      "110 --> [1, 0]\n",
+      "00 --> [0, 2]\n",
+      "100 --> [0, 2]\n",
+      "1 --> [2, 1]\n",
+      "01 --> [1, 1]\n",
+      "001 --> [1, 1]\n",
+      "010 --> [1, 0]\n",
+      "11 --> [1, 0]\n",
+      "011 --> [1, 0]\n",
+      "Probabilities & Weights\n",
+      "---------------------------\n",
+      "000   Pw: 1\n",
+      "100   Pw: 0.375\n",
+      "00   Pw: 0.375\n",
+      "010   Pw: 0.5\n",
+      "110   Pw: 0.5\n",
+      "10   Pw: 0.3125\n",
+      "0   Pw: 0.0703125\n",
+      "001   Pw: 0.125\n",
+      "101   Pw: 1\n",
+      "01   Pw: 0.125\n",
+      "011   Pw: 0.5\n",
+      "111   Pw: 1\n",
+      "11   Pw: 0.5\n",
+      "1   Pw: 0.0625\n",
+      "   Pw: 0.00341796875\n"
+     ]
+    }
+   ],
    "source": [
     "sequence = \"1100100110\"\n",
     "\n",
